# drf-nested-serializer

./: 404.html  index.html  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  style.css
docs/: getting_started.md  index.md  model_observer.md  style.css  tests.md
drf_nested_model_serializer/: __init__.py  observer.py  serializer.py  serializer.pyi
drf_nested_model_serializer/djangochannelsrestframework/observer/: __init__.py  nested_model_observer.py
drf_nested_model_serializer/drf_nested_model_serializer/: __init__.pyi
drf_nested_serializer/: serializer.py
getting_started/: index.html
search/: search_index.json
tests/: apps.py  models.py  settings.py
tests/args/: test_all.py  test_args.py  test_non_nullable.py  test_source.py
tests/misc/: test_nesting.py  test_validation.py
tests/relationships/: test_foreign_key.py  test_many_to_many.py  test_many_to_many_rel.py  test_many_to_one_rel.py  test_one_to_one.py  test_one_to_one_rel.py  test_relationship.py  test_through.py
